# ai-tournament

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md  links.md
ai-tournament/: Cargo.toml  README.md
ai-tournament/src/: client_handler.rs  configuration.rs  confrontation.rs  constraints.rs  lib.rs  logger.rs  match_runner.rs  server.rs  tournament.rs  tournament_strategy.rs
ai-tournament/src/agent_collector/: agent_compiler.rs  config_file_utils.rs  mod.rs
ai-tournament/tests/: games.rs  launch.rs
ai-tournament/tests/dummy_agents/does_not_respond/: Cargo.toml
ai-tournament/tests/rock_paper_scissors_agents/always_paper/src/: games.rs  main.rs
ai-tournament/tests/rock_paper_scissors_agents/always_rock/: Cargo.toml
ai-tournament/tests/rock_paper_scissors_agents/random_agent/: Cargo.toml
ai-tournament/tests/rock_paper_scissors_agents/random_agent/src/: main.rs
server/: Cargo.toml  README.md
server/src/: agent.rs  agent_compiler.rs  available_resources.rs  cgroup_manager.rs  client_handler.rs  configuration.rs  confrontation.rs  constraints.rs  lib.rs  main.rs  match.rs  match_runner.rs  server.rs  tournament.rs  tournament_maker.rs  tournament_strategy.rs
server/src/agent_collector/: agent_compiler.rs  config_file_utils.rs  mod.rs
server/src/legacyBin/: client.rs  server.rs
server/tests/: cgroups.rs  games.rs  launch.rs
server/tests/dummy_agents/agent2/: Cargo.toml
server/tests/dummy_agents/agent3/src/: main.rs
server/tests/dummy_agents/agent4/: Cargo.toml
server/tests/dummy_agents/agent4/src/: main.rs
server/tests/dummy_agents/does_not_compile/: Cargo.toml
server/tests/dummy_agents/does_not_compile/src/: main.rs
server/tests/dummy_agents/does_not_respond/: Cargo.toml
server/tests/dummy_agents/working_agent/: Cargo.toml
server/tests/rock_paper_scissors_agents/always_rock/: Cargo.toml  config.yaml
server/tests/rock_paper_scissors_agents/always_rock/src/: games.rs  (+1 more)
server/tests/rock_paper_scissors_agents/random_agent/: Cargo.toml  info.yml
(+38 files in other folders)
