[package]
authors = ["Atsuyo_"]
description = "A modular Rust crate for running AI tournament"
edition = "2021"
name = "ai-tournament"
version = "2.0.0"
rust-version = "1.80.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Atsuyo64/ai-tournament"
readme = "README.md"
exclude = ["tests/"] # those tests requires agent crates which have not point being published

[dependencies]
cgroups-rs = "0.3.4"
anyhow = "1.0"
sysinfo = "0.35.2"
tracing = "0.1.41"
num_cpus = "1.17.0"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt","time"] }
time = { version = "0.3.41", features = ["formatting", "local-offset"] }

[dev-dependencies.tracing-subscriber]
version = "0.3.19"
default-features = false
features = ["std", "registry", "fmt", "ansi"] 
