[package]
authors = ["Atsuyo64"]
description = "A modular Rust crate for running AI tournament"
edition = "2021"
name = "ai-tournament"
version = "0.1.0"
rust-version = "1.84.1"

[dependencies]
agent-interface = { path = "../agent-interface" }
cgroup-manager = { path = "../cgroup-manager" }
cgroups-rs = "0.3.4"
anyhow = "1.0"
sysinfo = "0.35.2"
tracing = "0.1.41"
num_cpus = "1.17.0"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt"] }
time = { version = "0.3.41", features = ["formatting", "local-offset"] }

[dev-dependencies.tracing-subscriber]
version = "0.3.19"
default-features = false
features = ["std", "registry", "fmt", "ansi"] 
