[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-interface = { path = "../agent-interface" }
cgroup-manager = { path = "../cgroup-manager" }
cgroups-rs = "0.3.4"
anyhow = "1.0"
sysinfo = "0.35.2"
tracing = "0.1.41"
num_cpus = "1.17.0"

[dev-dependencies.tracing-subscriber]
version = "0.3.19"
default-features = false
features = ["std", "registry", "fmt", "ansi"] 
